<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/feedbacktxt"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_fifth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_fourth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:text="@string/queriestxt"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_fifth"
            android:weightSum="6">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:src="@drawable/email"></ImageView>

            <TextView
                android:id="@+id/txt_sixth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="15dp"></TextView>

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/rightarrow"></ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_seventh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#E0E0E0"
            android:padding="10dp"
            android:text="@string/reply"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_seventh"
            android:weightSum="8">

            <ImageView
                android:id="@+id/img_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/chat"></ImageView>

            <TextView
                android:id="@+id/txt_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:text="@string/chat"
                android:textColor="@android:color/black"
                android:textSize="15dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_ninth"
                android:textColor="@android:color/black"
                android:text="@string/time"
                android:layout_weight="1"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/img_arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/rightarrow"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayout2"
            android:weightSum="11">

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:src="@drawable/share"></ImageView>

            <TextView
                android:id="@+id/txt_tenth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:text="@string/follow"
                android:textColor="@android:color/black"
                android:textSize="15dp"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:layout_weight="1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:layout_weight="1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/telegram"
                android:layout_weight="1"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/whatsapp"
                android:layout_weight="1"
                android:layout_gravity="center"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>