<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".InviteFragment">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_first"
        android:text="@string/invite"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/txt_second"
           android:text="@string/sentence"
           android:layout_below="@+id/txt_first"
           android:layout_centerHorizontal="true"
           android:textColor="@android:color/black"
           android:textAlignment="center"
           android:textSize="15dp"
           />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="250dp"
           android:id="@+id/img"
           android:layout_below="@+id/txt_second"
           android:src="@drawable/img1"
           ></ImageView>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/txt_third"
           android:layout_below="@+id/img"
           android:layout_margin="20dp"
           android:text="@string/invitenow"
           android:layout_centerHorizontal="true"
           android:textSize="20dp"
           android:textColor="@android:color/black"
           android:textStyle="bold"></TextView>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/linearlayout"
           android:layout_below="@+id/txt_third"
           android:orientation="horizontal"
           android:layout_margin="10dp"
           android:layout_centerHorizontal="true">
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/img_facebook"
               android:src="@drawable/facebook"
               android:backgroundTint="@android:color/white"
               android:layout_margin="10dp"
               />
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/img_whatsapp"
               android:src="@drawable/whatsapp"
               android:backgroundTint="@android:color/white"
               android:layout_margin="10dp"
               />
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/img_twitter"
               android:src="@drawable/twitter"
               android:backgroundTint="@android:color/white"
               android:layout_margin="10dp"
               />
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/img_telegram"
               android:src="@drawable/telegram"
               android:backgroundTint="@android:color/white"
               android:layout_margin="10dp"
               />
       </LinearLayout>

   </RelativeLayout>
</FrameLayout>